fix long form name out of box & reduce padding

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,6 +1,7 @@
 
 .form-item .title-row > .list-group-item-heading {
 	color: #34628a;
+	word-wrap:break-word;
 }
 
 .form-item:hover .title-row > .list-group-item-heading {
