--- a/public/modules/forms/base/css/form.css
+++ b/public/modules/forms/base/css/form.css
@@ -620,7 +620,7 @@ h3.forms-list-title {
 .form-item .title-row {
     position: relative;
     top: 15px;
-    padding-top:3em;
+    padding-top:2em;
     padding-bottom:1em;
 }
     .form-item .title-row h4 {
